--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-# Flask & 배포
+# 앱 & 서버
 Flask>=3.0
 gunicorn>=21.2
 python-dotenv>=1.0
-flask-cors>=4.0
-gotrue>=2.4.0           
 
-# Supabase (Python 클라이언트 v2)
+# Supabase 관련
 supabase>=2.4.0
+gotrue>=2.4.0
 
+# 유틸
+flask-limiter>=3.6.0
+flask-cors>=4.0
